infra/kubernetes/base/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: vietcropdoctor
  labels:
    name: vietcropdoctor
    app.kubernetes.io/managed-by: kustomize
